_sass/_layout.scss
.browserupgrade {
  margin: 0.2em 0;
  background: #ccc;
  color: #000;
  padding: 0.2em 0;
}

body {
  padding-top: $navbar-height  + 1px;
}

header {
  nav {
    @extend .navbar, .navbar-default, .navbar-fixed-top;

    .brand {
      @extend .navbar-brand;

      padding-top: $padding-base-vertical;
      padding-bottom: $padding-base-vertical;

      .logo {
        height: $navbar-height - ($padding-large-vertical * 2);
        margin-top: $padding-large-vertical / 2;
      }
    }

    .menu {
      @extend .nav, .navbar-nav, .navbar-right;
    }
  }
}

footer {
  @extend .text-muted;

  padding-top: $padding-large-vertical;
  padding-bottom: $padding-large-vertical;
  margin-top: $navbar-margin-bottom;
  border-top: 1px solid $navbar-default-border;
}

.jumbotron {
  .container-fluid &, .container & {
    border-radius: 0;
  }
}

.page-header {
  background-color: $jumbotron-bg;
  margin-top: 0;
  color: #fff;
  padding-top: $line-height-computed / 2;
  padding-bottom: $line-height-computed;
}

.well {
  h1, h2, h3, h4, h5, h6 {
    &:first-child {
      margin-top: 0;
    }
  }
}

